examples/kubernetes/authentication/keycloak/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      serviceAccountName: keycloak
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0.8
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 2000m
            limits:
              memory: 1024Mi
              cpu: 3000m
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import/inference-gateway-realm.json
              subPath: inference-gateway-realm.json
          args:
            - start-dev
            - --import-realm
          imagePullPolicy: Always
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm-config
